tests/errors/unknown_auth_mech.ki
var C = import("smtp.client")
var T = import("smtp.transport")
var c = C.SmtpClient(transport = T.FakeTransport(""))
c.esmtp_features = {"AUTH": "GSSAPI KERBEROS_V4"}
discard c.login("user", "pass", "auto")
